// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`containers/Profile/components/.../EducationItem when editMode is false renders correctly 1`] = `
<div>
  <div
    className="profile-experience-block profile-unverified-status"
  >
    <div
      className="relative"
    >
      <div
        className="Avatar Avatar-white Avatar-size-109"
      >
        <img
          alt="logo"
          src="appii-placeholder.png"
        />
      </div>
      <p
        className="visible-xs visible-sm"
      >
        <i
          className="profile-status-ico tooltip-position-top tooltip-movable tooltip-dark"
          data-tooltip="Not verified"
        >
           
        </i>
      </p>
    </div>
    <div
      className="profile-experience-info"
    >
      <i
        className="profile-status-ico tooltip-position-top tooltip-movable tooltip-dark hidden-xs hidden-sm"
        data-tooltip="Not verified"
      >
         
      </i>
      <p>
        Oxford Brookes University
      </p>
      <span>
        MSc
        
      </span>
      <em>
        2004
         - 
        2005
      </em>
    </div>
  </div>
</div>
`;

exports[`containers/Profile/components/.../EducationItem when editMode is true renders correctly 1`] = `
<div>
  <div
    className="profile-experience-block profile-unverified-status"
  >
    <div
      className="profile-experience-btns"
    >
      <button
        className="edit-btn"
        onClick={[Function]}
      >
         
      </button>
    </div>
    <div
      className="relative"
    >
      <div
        className="Avatar Avatar-white Avatar-size-109"
      >
        <img
          alt="logo"
          src="appii-placeholder.png"
        />
      </div>
      <p
        className="visible-xs visible-sm"
      >
        <i
          className="profile-status-ico tooltip-position-top tooltip-movable tooltip-dark"
          data-tooltip="Not verified"
        >
           
        </i>
      </p>
    </div>
    <div
      className="profile-experience-info"
    >
      <i
        className="profile-status-ico tooltip-position-top tooltip-movable tooltip-dark hidden-xs hidden-sm"
        data-tooltip="Not verified"
      >
         
      </i>
      <p>
        Oxford Brookes University
      </p>
      <span>
        MSc
        
      </span>
      <em>
        2004
         - 
        2005
      </em>
    </div>
  </div>
</div>
`;
